[twinvq] take snapshot