@@ -101,9 +101,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>17</source> <!-- TODO release causes compilation failure why? -->
-          <target>17</target>
+          <source>21</source> <!-- TODO release causes compilation failure why? -->
+          <target>21</target>
           <compilerArgs>
+            <arg>--add-modules=jdk.incubator.vector</arg>
             <arg>--add-exports</arg>
             <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
           </compilerArgs>
